// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualHelperToggle fires toggleVisualHelper when toggled: StyledToggleBase props 1`] = `
{
  "checked": false,
  "className": undefined,
  "label": "Visual helper",
  "onClick": [Function],
}
`;

exports[`VisualHelperToggle renders per snapshot with visualHelperEnabled false 1`] = `
<DocumentFragment>
  <mock-styledtogglebase
    checked="false"
    label="Visual helper"
  />
</DocumentFragment>
`;

exports[`VisualHelperToggle renders per snapshot with visualHelperEnabled true 1`] = `
<DocumentFragment>
  <mock-styledtogglebase
    checked="true"
    label="Visual helper"
  />
</DocumentFragment>
`;
